--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Raj Shekhar",
   "license": "ISC",
+  "engines": {
+    "node": "13.14"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.2",
